--- a/config/x86-mini.config
+++ b/config/x86-mini.config
@@ -6292,7 +6292,7 @@ CONFIG_PACKAGE_zerotier=y
 #
 # Web Servers/Proxies
 #
-CONFIG_PACKAGE_alist=y
+# CONFIG_PACKAGE_alist is not set
 # CONFIG_PACKAGE_apache is not set
 # CONFIG_PACKAGE_brook is not set
 # CONFIG_PACKAGE_cgi-io is not set
