--- a/.github/workflows/Build-X86P.yml
+++ b/.github/workflows/Build-X86P.yml
@@ -1,9 +1,8 @@
 name: Build X86P
-
 on:
   repository_dispatch:
   workflow_dispatch:
-
+  
 env:
   REPO_URL: https://github.com/coolsnowwolf/lede
   REPO_BRANCH: master
@@ -38,7 +37,7 @@ jobs:
         echo -e "$(sudo lshw -short -C memory | grep GiB)\n"
         echo "--------------------------硬盘信息--------------------------"
         echo "硬盘数量: $(ls /dev/sd* | grep -v [1-9] | wc -l)" && df -hT
-
+    
     - name: 初始化编译环境
       env:
         DEBIAN_FRONTEND: noninteractive
@@ -50,15 +49,16 @@ jobs:
           /usr/share/dotnet \
           /etc/mysql \
           /etc/php
-        sudo -E apt-get -y purge azure-cli ghc*  zulu* hhvm llvm* firefox google* dotnet* powershell openjdk* mysql* php*
-        sudo -E apt-get update
-        sudo -E apt-get install -y ack antlr3 asciidoc autoconf automake autopoint binutils bison build-essential \
-        bzip2 ccache cmake cpio curl device-tree-compiler fastjar flex gawk gettext gcc-multilib g++-multilib \
-        git gperf haveged help2man intltool libc6-dev-i386 libelf-dev libfuse-dev libglib2.0-dev libgmp3-dev \
-        libltdl-dev libmpc-dev libmpfr-dev libncurses5-dev libncursesw5-dev libpython3-dev libreadline-dev \
-        libssl-dev libtool lrzsz mkisofs msmtp ninja-build p7zip p7zip-full patch pkgconf python2.7 python3 \
-        python3-pyelftools python3-setuptools qemu-utils rsync scons squashfs-tools subversion swig texinfo \
-        uglifyjs upx-ucl unzip vim wget xmlto xxd zlib1g-dev
+        sudo -E apt -y purge azure-cli ghc*  zulu* hhvm llvm* firefox google* dotnet* powershell openjdk* mysql* php*
+        sudo -E apt update
+        sudo -E apt  install -y ack antlr3 asciidoc autoconf automake autopoint binutils bison build-essential \
+            bzip2 ccache cmake cpio curl device-tree-compiler fastjar flex gawk gettext gcc-multilib g++-multilib \
+            git gperf haveged help2man intltool libc6-dev-i386 libelf-dev libfuse-dev libglib2.0-dev libgmp3-dev \
+            libltdl-dev libmpc-dev libmpfr-dev libncurses5-dev libncursesw5-dev libpython3-dev libreadline-dev \
+            libssl-dev libtool lrzsz mkisofs msmtp ninja-build p7zip p7zip-full patch pkgconf python2.7 python3 \
+            python3-pyelftools python3-setuptools qemu-utils rsync scons squashfs-tools subversion swig texinfo \
+            uglifyjs upx-ucl unzip vim wget xmlto xxd zlib1g-dev \
+            make clang llvm nano python3-pip aria2
         sudo -E apt-get -y autoremove --purge
         sudo -E apt-get clean
         sudo timedatectl set-timezone "$TZ"
@@ -128,6 +128,7 @@ jobs:
         cd $OPENWRT_PATH
         $GITHUB_WORKSPACE/scripts/preset-clash-core.sh $ARCH_KERNEL
         $GITHUB_WORKSPACE/scripts/preset-adguard-core.sh $ARCH_KERNEL
+        $GITHUB_WORKSPACE/scripts/preset-psswall.sh $ARCH_KERNEL
 
     - name: 下载软件包
       run: |
@@ -163,6 +164,7 @@ jobs:
         mv -f $OPENWRT_PATH/bin/packages/*/*/*.ipk packages
         tar -zcf Packages.tar.gz packages
         rm -rf packages feeds.buildinfo version.buildinfo
+        mv "openwrt-x86-64-generic-squashfs-combined-efi.img.gz" "openwrt-x86m-${{ env.FILE_DATE }}-squashfs-combined-efi.img.gz"
         echo "KERNEL=$(cat *.manifest | grep ^kernel | cut -d- -f2 | tr -d ' ')" >> $GITHUB_ENV
         echo "FIRMWARE_PATH=$PWD" >> $GITHUB_ENV
 
