--- a/.github/workflows/Build-X86P.yml
+++ b/.github/workflows/Build-X86P.yml
@@ -164,7 +164,7 @@ jobs:
         mv -f $OPENWRT_PATH/bin/packages/*/*/*.ipk packages
         tar -zcf Packages.tar.gz packages
         rm -rf packages feeds.buildinfo version.buildinfo
-        mv "openwrt-x86-64-generic-squashfs-combined-efi.img.gz" "openwrt-x86m-${{ env.FILE_DATE }}-squashfs-combined-efi.img.gz"
+        mv "openwrt-x86-64-generic-squashfs-combined-efi.img.gz" "openwrt-x86p-${{ env.FILE_DATE }}-squashfs-combined-efi.img.gz"
         echo "KERNEL=$(cat *.manifest | grep ^kernel | cut -d- -f2 | tr -d ' ')" >> $GITHUB_ENV
         echo "FIRMWARE_PATH=$PWD" >> $GITHUB_ENV
 
