--- a/.github/workflows/Build-X86M.yml
+++ b/.github/workflows/Build-X86M.yml
@@ -2,6 +2,11 @@ name: Build X86M
 on:
   repository_dispatch:
   workflow_dispatch:
+    inputs:
+        ssh:
+          description: 'SSH connection to Actions'
+          required: false
+          default: 'false'
   
 env:
   REPO_URL: https://github.com/coolsnowwolf/lede
