--- a/.github/workflows/Build-X86M.yml
+++ b/.github/workflows/Build-X86M.yml
@@ -135,6 +135,13 @@ jobs:
         $GITHUB_WORKSPACE/scripts/preset-adguard-core.sh $ARCH_KERNEL
         $GITHUB_WORKSPACE/scripts/preset-psswall.sh $ARCH_KERNEL
 
+    - name: SSH 连接到 Actions
+      uses: P3TERX/ssh2actions@v1.0.0
+      if: (github.event.inputs.ssh == 'true' && github.event.inputs.ssh  != 'false') || contains(github.event.action, 'ssh')
+      env:
+        TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
+        TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
+
     - name: 下载软件包
       run: |
         cd $OPENWRT_PATH
