--- a/.github/workflows/Build-X86PANG.yml
+++ b/.github/workflows/Build-X86PANG.yml
@@ -146,7 +146,7 @@ jobs:
         make -j$(nproc) || make -j1 || make -j1 V=s
         echo "status=success" >> $GITHUB_OUTPUT
         echo "DATE=$(date +"%Y-%m-%d %H:%M:%S")" >> $GITHUB_ENV
-        echo "FILE_DATE=$(date +"%Y.%m.%d")" >> $GITHUB_ENV
+        echo "FILE_DATE=$(date +"%Y.%m.%d_%H.%M")" >> $GITHUB_ENV
 
     - name: 上传bin文件夹
       if: steps.compile.outputs.status == 'success' && env.UPLOAD_BIN_DIR == 'true'
