--- a/.github/workflows/Build-X86.yml
+++ b/.github/workflows/Build-X86.yml
@@ -140,6 +140,8 @@ jobs:
         cd $OPENWRT_PATH
         sed -i '/^#src-git luci https:\/\/github.com\/coolsnowwolf\/luci$/s/^#//' feeds.conf.default && sed -i '/^src-git luci https:\/\/github.com\/coolsnowwolf\/luci\.git;openwrt-23\.05$/s/^/#/' feeds.conf.default
         ./scripts/feeds update -a
+        rm -rf feeds/luci/themes/luci-theme-argon
+        git clone -b 18.06 https://github.com/jerrykuku/luci-theme-argon.git package/downloads/luci-theme-argon
         ./scripts/feeds install -a
 
     - name: 加载自定义配置
