--- a/.github/workflows/Build-X86.yml
+++ b/.github/workflows/Build-X86.yml
@@ -172,7 +172,8 @@ jobs:
         make -j$(nproc) || make -j1 || make -j1 V=s
         echo "status=success" >> $GITHUB_OUTPUT
         echo "DATE=$(date +"%Y-%m-%d %H:%M:%S")" >> $GITHUB_ENV
-        echo "FILE_DATE=$(date +"%Y.%m.%d_%H.%M")" >> $GITHUB_ENV
+        echo "FILE_DATE=$(date +"%Y.%m.%d")" >> $GITHUB_ENV
+        echo "FILE_DATE=$(date +"%Y.%m.%d")" >> $GITHUB_ENV
 
     - name: 上传bin文件夹
       if: steps.compile.outputs.status == 'success' && env.UPLOAD_BIN_DIR == 'true'
@@ -190,7 +191,13 @@ jobs:
         mv -f $OPENWRT_PATH/bin/packages/*/*/*.ipk packages
         tar -zcf Packages.tar.gz packages
         rm -rf packages feeds.buildinfo version.buildinfo
-        mv "openwrt-x86-64-generic-squashfs-combined-efi.img.gz" "openwrt-x86-${{ env.FILE_DATE }}-squashfs-combined-efi.img.gz"
+        if [ "${{ github.event.inputs.build_target }}" == "X86MINI" ]; then
+          mv "openwrt-x86-64-generic-squashfs-combined-efi.img.gz" "openwrt-x86mini-${{ env.FILE_DATE }}-squashfs-combined-efi.img.gz"
+        elif [ "${{ github.event.inputs.build_target }}" == "X86PLUS" ]; then
+          mv "openwrt-x86-64-generic-squashfs-combined-efi.img.gz" "openwrt-x86plus-${{ env.FILE_DATE }}-squashfs-combined-efi.img.gz"
+        else
+          mv "openwrt-x86-64-generic-squashfs-combined-efi.img.gz" "openwrt-x86pang-${{ env.FILE_DATE }}-squashfs-combined-efi.img.gz"
+        fi
         echo "KERNEL=$(cat *.manifest | grep ^kernel | cut -d- -f2 | tr -d ' ')" >> $GITHUB_ENV
         echo "FIRMWARE_PATH=$PWD" >> $GITHUB_ENV
 
