--- a/.github/workflows/Build-X86.yml
+++ b/.github/workflows/Build-X86.yml
@@ -145,10 +145,10 @@ jobs:
       run: |
         [ -e files ] && mv files $OPENWRT_PATH/files
         [ -e $CONFIG_FILE ] && mv $CONFIG_FILE $OPENWRT_PATH/.config
-        #chmod +x $GITHUB_WORKSPACE/scripts/*.sh
+        chmod +x $GITHUB_WORKSPACE/scripts/*.sh
         chmod +x $DIY_SCRIPT
         $GITHUB_WORKSPACE/$DIY_SCRIPT
-        #cd $OPENWRT_PATH
+        cd $OPENWRT_PATH
         $GITHUB_WORKSPACE/scripts/preset-clash-core.sh $ARCH_KERNEL
         $GITHUB_WORKSPACE/scripts/preset-adguard-core.sh $ARCH_KERNEL
         #$GITHUB_WORKSPACE/scripts/preset-psswall.sh $ARCH_KERNEL
