--- a/.github/workflows/Build-X86.yml
+++ b/.github/workflows/Build-X86.yml
@@ -149,7 +149,7 @@ jobs:
         chmod +x $DIY_SCRIPT
         $GITHUB_WORKSPACE/$DIY_SCRIPT
         cd $OPENWRT_PATH
-        $GITHUB_WORKSPACE/scripts/preset-clash-core.sh $ARCH_KERNEL
+        #$GITHUB_WORKSPACE/scripts/preset-clash-core.sh $ARCH_KERNEL
         #$GITHUB_WORKSPACE/scripts/preset-adguard-core.sh $ARCH_KERNEL
         #$GITHUB_WORKSPACE/scripts/preset-psswall.sh $ARCH_KERNEL
 
